hello-deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  labels:
    app: hello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello-api
        image: hello-api:k8
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
      - name: hello-web
        image: hello-web:k8
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
